# LINKS-SOMA

./: .gitignore  README.md
.github/workflows/: build.yaml
example/data/: README.md
links-soma/: .gitignore  README.md  package.json  release.md  turbo.json
links-soma-citygml-conv/: .gitignore  Cargo.toml  README.md  tsconfig.json
links-soma-citygml-conv/app/: package.json
links-soma-citygml-conv/app/src/: app.css
links-soma-citygml-conv/app/src-tauri/: Cargo.toml  attributes_data.json  tauri.conf.json
links-soma-citygml-conv/docs/: docfx.json  index.md
links-soma-citygml-conv/docs/manual/: toc.yml
links-soma-citygml-conv/nusamai/: Cargo.toml
links-soma-geocoding/: README.md  index.html  package.json
links-soma-geocoding/electron/: main.ts  tsconfig.json
links-soma-geocoding/public/: icon.icns
links-soma-geocoding/src/: App.tsx  index.css  main.tsx
links-soma-geocoding/src/type/: type.ts
links-soma/.github/: pull_request_template.md
links-soma/app/: .eslintrc.cjs  .gitignore  drizzle.config.ts  forge.config.ts  index.html  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.forge.json  tsconfig.json  vite.base.config.ts  vitest.config.mjs
links-soma/ml/: README.md  build.bat  build.js  build.ps1  package.json  pyproject.toml  requirements.txt
links-soma/ml/async_tasks/: IF001.py  IF002.py  IF003.py  IF004.py  constants.py  utils.py
links-soma/ml/src/E001_DataMatching/: E012.py  E013.py  E014.py  E016.py
links-soma/ml/src/E002_Classification/: E021.py  E022.py
links-soma/ml/src/E003_Summarization/: E032.py  E033.py
(+384 files in other folders)
