[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["HideBa <baba.papa1120.ba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
geopandas = "1.0.1"
lightgbm = "4.4.0"
matplotlib = "3.8.4"
numpy = "1.26.4"
pandas = "2.2.2"
shapely = "2.0.4"
fiona = "1.9.6"
pyproj = "3.6.1"
rtree = "1.3.0"
geopy = "2.4.1"
seaborn = "0.13.2"
tqdm = "4.66.4"
chardet = "5.2.0"
scikit-learn = "1.5.0"
scipy = "1.14.0"
requests = "2.31.0"
python-dotenv = "1.0.1"
optuna = "3.6.1"
memory-profiler = "0.61.0"
imbalanced-learn = "0.12.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pyinstaller = { version = "6.11.0", python = ">=3.11,<3.14" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
